HWS-441
Added new metric hw_gpu_errors_total

* Collected **errorCount** parameter on the *GPU* monitors in
`matrix-engine`
* Mapped the **errorCount** parameter to the **hw.gpu.errors_total**
*OTEL* metric in `hws-agent`
* Updated **metrics.md** in `hws-otel-collector`